--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "server": "cd server && npm run server",
     "build": "cd client && npm run build",
     "install": "cd server && npm i && cd ../client && npm i",
-    "client": "cd client && npm start",
-    "heroku-prebuild": "npm run install"
+    "client": "cd client && npm start"
   },
   "cacheDirectories": [
     "server/node_modules",
     "client/node_modules"
   ],
+  "engines": {
+    "npm": "^8.19.2",
+    "node": "^16.18.1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
